// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav renders Jobs as active page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <Link
    className="unstyled"
    id="pipelinesButton"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="jobsButton"
    replace={false}
    to="/jobs"
  >
    <WithStyles(Button)
      className="button active"
    >
      <PipelinesIcon
        color="rgb(227, 233, 237, 1)"
      />
      <span
        className="label"
      >
        Jobs
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders Jobs as active when on JobDetails page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <Link
    className="unstyled"
    id="pipelinesButton"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="jobsButton"
    replace={false}
    to="/jobs"
  >
    <WithStyles(Button)
      className="button active"
    >
      <PipelinesIcon
        color="rgb(227, 233, 237, 1)"
      />
      <span
        className="label"
      >
        Jobs
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders Pipelines as active page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <Link
    className="unstyled"
    id="pipelinesButton"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button active"
    >
      <PipelinesIcon
        color="rgb(227, 233, 237, 1)"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="jobsButton"
    replace={false}
    to="/jobs"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Jobs
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders Pipelines as active when on PipelineDetails page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <Link
    className="unstyled"
    id="pipelinesButton"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button active"
    >
      <PipelinesIcon
        color="rgb(227, 233, 237, 1)"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="jobsButton"
    replace={false}
    to="/jobs"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Jobs
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders collapsed state 1`] = `
<div
  className="root noShrink collapsedRoot"
  id="sideNav"
>
  <Link
    className="unstyled"
    id="pipelinesButton"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button active collapsedButton"
    >
      <PipelinesIcon
        color="rgb(227, 233, 237, 1)"
      />
      <span
        className="collapsedLabel label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="jobsButton"
    replace={false}
    to="/jobs"
  >
    <WithStyles(Button)
      className="button collapsedButton"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="collapsedLabel label"
      >
        Jobs
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator collapsedSeparator"
  />
  <WithStyles(IconButton)
    className="chevron collapsedChevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders expanded state 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <Link
    className="unstyled"
    id="pipelinesButton"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button active"
    >
      <PipelinesIcon
        color="rgb(227, 233, 237, 1)"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="jobsButton"
    replace={false}
    to="/jobs"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Jobs
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders nothing as active page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <Link
    className="unstyled"
    id="pipelinesButton"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="jobsButton"
    replace={false}
    to="/jobs"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Jobs
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;
